<resources>
    <string name="app_name">Sixt</string>
    <string name="action_settings">Settings</string>

    <string name="permission_cancel">Cancel</string>
    <string name="permission_settings">Settings</string>
    <string name="not_implemented">Not implemented</string>
    <string name="no_internet_connection">No internet conneciton</string>
    <string name="car_list_is_empty">Car list is empty</string>
    <string name="group">Group</string>
    <string name="color">Color</string>
    <string name="cars">Cars</string>
    <string name="enter_car_name">Enter car name</string>
    <string name="map">Map</string>
    <string name="home">Home</string>
    <string name="cars_details">Car Details</string>
    <string name="model_identifier">Model Identifier</string>
    <string name="model_name">Model name</string>
    <string name="make">Make</string>
    <string name="series">Series</string>
    <string name="fuel_type">Fuel type</string>
    <string name="fuel_level">Fuel level</string>
    <string name="transmission">Transmission</string>
    <string name="license_plate">License Plate</string>
    <string name="location">Location</string>
    <string name="inner_cleanliness">Inner Cleanliness</string>
</resources>
